<resources>
    <string name="app_name">Motivation</string>
    <string name="txt_hello">Olá</string>
    <string name="txt_appName">Motivation Application</string>
    <string name="text_btn">Nova frase</string>
    <string name="new_phrase">Nova frase</string>
    <string name="txt_your_name">Qual seu nome?</string>
    <string name="user">Usuário</string>
    <string name="phrase">Frase</string>
    <string name="save">Salvar</string>
    <string name="lets_begin">Vamos começar?</string>
    <string name="phrases_all">Todas as frases</string>
    <string name="phrases_motivation">Frases de motivação</string>
    <string name="phrases_morning">Frases para manhã</string>
    <string name="validation_mandatory_name">Informe seu nome.</string>
    <string name="txt_letsBegin">Vamos começar?</string>
    <string name="txt_nameInsert">Qual seu nome?</string>
    <string name="text_salvar">Salvar</string>
    <string name="txt_whtsname">Qual seu nome?</string>
</resources>
