<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".ui.UserActivity">

    <TextView
        android:id="@+id/TextViewVamosCom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/cabin"
        android:text="@string/txt_letsBegin"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/text_insertName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:hint="@string/txt_your_name"
        android:inputType="textShortMessage"
        android:maxLength="33"
        android:textColorHint="@color/white"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btn_salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/material_dynamic_neutral_variant60"
        android:fontFamily="@font/cabin"
        android:text="@string/text_salvar" />
</RelativeLayout>